[package]
name = "aios-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
aios-memory = { path = "../memory" }
aios-tools = { path = "../tools" }
