[package]
name = "aios-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
