[package]
name = "aios-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aios-runtime"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }

# Internal dependencies
aios-memory = { path = "../memory" }
aios-agents = { path = "../agents" }
aios-tools = { path = "../tools" }
aios-recovery = { path = "../recovery" }
aios-config = { path = "../config" }
